# ProgPOW

./: .gitignore  CMakeLists.txt  README.md  progpow-debug.diff  test-vectors.md
cmake/Hunter/: config.cmake
ethminer/: MinerAux.h
libethash/: ethash.h
libethash-cl/: CLMiner.cpp  CLMiner.h  CLMiner_kernel.cl  CMakeLists.txt
libethash-cuda/: CMakeLists.txt  CUDAMiner.cpp  CUDAMiner.h  CUDAMiner_cuda.cu  CUDAMiner_kernel.cu  cuda_helper.h
libethcore/: EthashAux.h
libpoolprotocols/getwork/: EthGetworkClient.cpp
libpoolprotocols/stratum/: EthStratumClient.cpp
libprogpow/: ProgPow.cpp  ProgPow.h
test/: kernel.cu
